fix bug where fade-in animation doesn't happen when visibility=visible (needed display instead)

--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@
   color: #fff;
   text-align: center;
   text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
-  animation: fadeIn 3s;
+  animation: fadeIn 5s;
 }
 
 #color_2 {
@@ -59,7 +59,7 @@
 }
 
 .hidden {
-  visibility: hidden;
+  display: none;
 }
 
 #red {
